traces/bug_492.txt
examples++-load/ClosePoints.cpp:513: error: DEAD_STORE
  The value written to &qoffset10 (type int) is never used.
Showing all 1 steps of the trace


examples++-load/ClosePoints.cpp:513:5: Write of unused value
511.       double * q0=&(Q(0,0));
512.       int qoffset01 = Q.step*Q.shapej.step;;
513.       int qoffset10 = Q.step*Q.shapei.step;;
           ^
514.       ffassert( mp ==2);
515.       ffassert( mq ==2);
